--- a/Wild Raccoons AI/Wild Raccoons AI.csproj
+++ b/Wild Raccoons AI/Wild Raccoons AI.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Assets\Development\Pathfinding\Scripts\PF_Algorithm.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\PF_Grid.cs" />
+    <Compile Include="Assets\Development\Pathfinding\Scripts\PF_Heap.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\PF_Node.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
