--- a/Wild Raccoons AI/Wild Raccoons AI.csproj
+++ b/Wild Raccoons AI/Wild Raccoons AI.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Development\Decision Making\Scripts\BossAttacks.cs" />
+    <Compile Include="Assets\Development\Decision Making\Scripts\BulletScript.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\ObjectPatrol.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\PF_Algorithm.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\PF_AlgorithmManager.cs" />
