--- a/Wild Raccoons AI/Wild Raccoons AI.csproj
+++ b/Wild Raccoons AI/Wild Raccoons AI.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Development\Decision Making\Scripts\AttackManager.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\BossAttacks.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\BulletScript.cs" />
+    <Compile Include="Assets\Development\Decision Making\Scripts\MeleeAttack.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\Stats.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\Zone.cs" />
     <Compile Include="Assets\Development\Generic\Boss Assets\HandController.cs" />
