--- a/Wild Raccoons AI/Wild Raccoons AI.csproj
+++ b/Wild Raccoons AI/Wild Raccoons AI.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Development\Decision Making\Scripts\BossAttacks.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\BulletScript.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\MeleeAttack.cs" />
+    <Compile Include="Assets\Development\Decision Making\Scripts\PhysicalShield.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\Shield.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\Stats.cs" />
     <Compile Include="Assets\Development\Decision Making\Scripts\Zone.cs" />
