--- a/Wild Raccoons AI/Wild Raccoons AI.csproj
+++ b/Wild Raccoons AI/Wild Raccoons AI.csproj
@@ -14,6 +14,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
+    <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.1f1</UnityVersion>
@@ -50,31 +51,31 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TestRunner">
-      <HintPath>Library\UnityAssemblies\UnityEngine.TestRunner.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
-      <HintPath>Library\UnityAssemblies\nunit.framework.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Analytics">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
-      <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
-      <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -94,9 +95,15 @@
     <Compile Include="Assets\Development\Generic\Powerups\Powerup Scripts\Powerup_Health.cs" />
     <Compile Include="Assets\Development\Generic\Powerups\Powerup Scripts\Powerup_Mana.cs" />
     <Compile Include="Assets\Development\Generic\Powerups\Powerup Scripts\Powerup_Speed.cs" />
+    <Compile Include="Assets\Development\Learning\Scripts\DecisionNodeClass.cs" />
+    <Compile Include="Assets\Development\Learning\Scripts\ID3Decision.cs" />
+    <Compile Include="Assets\Development\Learning\Scripts\ID3Learning.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Ability_ArcaneShot.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Ability_Base.cs" />
+    <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Ability_MagicShield.cs" />
+    <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Ability_PhysicalRanged.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Ability_Teleport.cs" />
+    <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Area_ManaShield.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Camera_FollowPlayer.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\Gameplay\Projectile_ArcaneShot.cs" />
     <Compile Include="Assets\Development\Pathfinding\Scripts\ObjectPatrol.cs" />
